Add homepage layout

--- a/WebApp/Pages/Match/Index.cshtml
+++ b/WebApp/Pages/Match/Index.cshtml
@@ -153,3 +153,10 @@
     </div>
 </div>
 </body>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
+
